# AEC3

./: build_config.h
aec3_pcm_output/: combined.pcm
aec3_pcm_output/chunks/: aec3_chunk_0006.pcm  aec3_chunk_0007.pcm  aec3_chunk_0008.pcm  aec3_chunk_0009.pcm  aec3_chunk_0010.pcm  aec3_chunk_0011.pcm  aec3_chunk_0012.pcm  aec3_chunk_0013.pcm  aec3_chunk_0014.pcm  aec3_chunk_0015.pcm  aec3_chunk_0016.pcm  aec3_chunk_0017.pcm  aec3_chunk_0018.pcm  aec3_chunk_0019.pcm  aec3_chunk_0020.pcm  aec3_chunk_0021.pcm  aec3_chunk_0022.pcm  aec3_chunk_0023.pcm  aec3_chunk_0024.pcm  aec3_chunk_0025.pcm  aec3_chunk_0026.pcm  aec3_chunk_0027.pcm  aec3_chunk_0028.pcm  aec3_chunk_0029.pcm  aec3_chunk_0030.pcm  aec3_chunk_0031.pcm  aec3_chunk_0032.pcm  aec3_chunk_0033.pcm  aec3_chunk_0034.pcm  aec3_chunk_0035.pcm  aec3_chunk_0036.pcm  aec3_chunk_0037.pcm  aec3_chunk_0038.pcm  aec3_chunk_0039.pcm  aec3_chunk_0040.pcm  aec3_chunk_0041.pcm  aec3_chunk_0042.pcm  aec3_chunk_0043.pcm  aec3_chunk_0044.pcm  aec3_chunk_0045.pcm  (+4017 more)
android_output/: TTS_AEC3_USAGE.md
android_output/aar/: AndroidManifest.xml
build_android/: Android.mk  CMakeLists.txt  android_jni_wrapper.cc  tts_aec3_wrapper.cc  wqaec.cpp  wqaec_config.h
build_android/arm64-v8a/: CMakeCache.txt  Makefile  cmake_install.cmake
build_android/armeabi-v7a/: CMakeCache.txt  Makefile  cmake_install.cmake
build_android/java/com/tts/aec3/: WebRtcAec3.java
build_android/x86/: CMakeCache.txt  Makefile  cmake_install.cmake
build_android/x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
my-info/: build_android_aar.sh
my-info/logs/: 1.txt  2.txt  3.txt  wav-hex.txt
my-info/my-cpp-files/: wqaec.cpp  wqaec.h  wqaec_config.cpp  wqaec_config.h
my-info/my-doc/: ace3-blogs.txt
my-info/my-doc/webrtc-aec3-doc/: summary-1.txt
tools/: prepare_pcm_chunks.py
